--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <h2>You can visit one of <span>my personal pages</span> below:</h2>
       <div id="icons">
         <a id="profile-link" href="http://www.github.com/staog" target="_blank"><i class="fa fa-github" style="color:aqua"></i></a>
-        <a href="https://www.freecodecamp.org/staog" target="_blank"<i class="fa fa-free-code-camp" style="color:red"></i></a>
+        <a href="https://www.freecodecamp.org/staog" target="_blank"><i class="fa fa-free-code-camp" style="color:red"></i></a>
         <a href="http://www.codepen.io/staog" target="_blank"><i class="fa fa-codepen" style="color:orange"></i></a>
       </div><br>
 
