--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <p>Anyway, just to say a few things about my work.</p>
           <p>Agricultural engineer by vocation, but I really love to dabble with software.</p>
           <p>Web development is my passion. I've been building web sites and web apps for quite some time now.</p>
-          <p>I know the basics of the web very well (HTML, CSS and JavaScript), while trying to learn more about React, NodeJS and MongoDB.</p>
+          <p>I know the basics of the web very well (HTML, CSS and JavaScript), while trying to learn more about React, D3, NodeJS and MongoDB.</p>
           <p>I'm using FLOOS exclusively.  GNU/Linux, Git, Atom... Open source is the right way to go if you ask me. :D</p>
         <p>Knowledge is not to know something, but to be willing to share that knowledge with everybody else.</p>
           <p>Currently employed by Rapidex. Actually, I'm doing everything remotely. And that's really awesome.</p>
