--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <p>I know the basics of the web very well (HTML, CSS and JavaScript), while trying to learn more about React, D3, NodeJS and MongoDB.</p>
           <p>I'm using FLOOS exclusively.  GNU/Linux, Git, Atom... Open source is the right way to go if you ask me. :D</p>
         <p>Knowledge is not to know something, but to be willing to share that knowledge with everybody else.</p>
-          <p>Currently employed by Rapidex. Actually, I'm doing everything remotely. And that's really awesome.</p>
+          <p>Currently employed by Rapidex. In my spare time, I'm doing some freelancing. And that's really awesome.</p>
           <p>Hope to see you around...</p><br>
       </section>
 
