--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </div><br>
-      <p>2019 - Made by <span>Milan V. Kecojević</span> - No lefts reversed!</p>
+      <p>2019 - Made by <span>Milan V. Kecojević</span> - No lefts reversed! :)</p>
       
     </footer>
 
